--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E04] Mapas/nbproject/private/
 /JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E04] Mapas/build/
 /JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E05] Conjuntos/nbproject/private/
+/JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E06] Comparadores/nbproject/private/
