--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E04] Mapas/build/
 /JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E05] Conjuntos/nbproject/private/
 /JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E06] Comparadores/nbproject/private/
+/JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E07] ClaseCollections/nbproject/private/
+/JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E07] ClaseCollections/build/
