--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,10 @@
 /JAVA/02-5.Colecciones y Estructuras De Datos JAVA/[[]E07] ClaseCollections/build/
 /JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L01] Expresiones Lambda/nbproject/private/
 /JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L01] Expresiones Lambda/build/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L02] Interfaces Funcionales/nbproject/private/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L02] Interfaces Funcionales/build/
+/JAVA/05.Bases De Datos JAVA/01_IntroduccionJDBC/target/
+/JAVA/05.Bases De Datos JAVA/02_ManejoJDBC/target/
+/JAVA/05.Bases De Datos JAVA/03_TransaccionesJDBC/target/
+/JAVA/05.Bases De Datos JAVA/04_CapaDeDatos_PatronDeDiseno/target/
+/JAVA/05.Bases De Datos JAVA/05_PoolDeConexionesJDBC/target/
