--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,17 @@
 /JAVA/06.Servelets/01HolaMundoJavaWebAplication/target/
 /JAVA/06.Servelets/05CabecerosHTTP/target/
 /JAVA/06.Servelets/06CodigoDeEstados/target/
+/JAVA/00.Ejercicios/0.Libro/1_16SobreCarga/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_15YearsBisiestos/build/
+/JAVA/00.Ejercicios/0.Libro/1_15YearsBisiestos/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_15 YearsBisiestos/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_16 SobreCarga/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_16 SobreCarga/build/
+/JAVA/00.Ejercicios/0.Libro/1_17 Tablas/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_17 Tablas/build/
+/JAVA/00.Ejercicios/0.Libro/1_17 TablasSumayProducto/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_19 HowMany/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_19 HowMany/build/
+/JAVA/00.Ejercicios/0.Libro/1_19 HowMany/dist/
+/JAVA/00.Ejercicios/0.Libro/1_20 PuzzleAritmetico/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_20 PuzzleAritmetico/build/
