--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,4 @@
 /JAVA/00.Ejercicios/0.Libro/1_19 HowMany/dist/
 /JAVA/00.Ejercicios/0.Libro/1_20 PuzzleAritmetico/nbproject/private/
 /JAVA/00.Ejercicios/0.Libro/1_20 PuzzleAritmetico/build/
+/JAVA/00.Ejercicios/0.Libro/1_21 ParejasEnteros/nbproject/private/
