Ejercicios cap2 p1 JAVA

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,25 @@
 /JAVA/00.Ejercicios/0.Libro/1_20 PuzzleAritmetico/nbproject/private/
 /JAVA/00.Ejercicios/0.Libro/1_20 PuzzleAritmetico/build/
 /JAVA/00.Ejercicios/0.Libro/1_21 ParejasEnteros/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_21 ParejasEnteros/build/
+/JAVA/00.Ejercicios/0.Libro/1_22 NumerosRomanos/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/1_22 NumerosRomanos/build/
+/JAVA/00.Ejercicios/0.Libro/Tests/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/Tests/build/
+/JAVA/00.Ejercicios/0.Libro/2_12 OperacionesMatriz/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/2_12 OperacionesMatriz/build/
+/JAVA/00.Ejercicios/0.Libro/2_14 ReverseArray/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/2_14 ReverseArray/build/
+/JAVA/00.Ejercicios/0.Libro/2_17 MaximoDeConjuntos/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/2_17 MaximoDeConjuntos/build/
+/JAVA/00.Ejercicios/0.Libro/2_16 OperacionesMatriz/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/2_12 OperacionesArray/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/2_16 OperacionesMatriz/build/
+/JAVA/00.Ejercicios/0.Libro/2_18 DuiplicadosConjuntos/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/2_18 DuiplicadosConjuntos/build/
+/JAVA/00.Ejercicios/0.Libro/2_19 MasUnosEnFila/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/2_19 MasUnosEnFila/build/
+/JAVA/00.Ejercicios/0.Libro/2_20 ContadorDeCaracteres/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/2_20 ContadorDeCaracteres/build/
+/JAVA/00.Ejercicios/0.Libro/2_22 ContadorDeNumeris/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/2_22 ContadorDeNumeros/nbproject/private/
