Ejercicios JAVA cap3 p1

--- a/.gitignore
+++ b/.gitignore
@@ -106,3 +106,11 @@
 /JAVA/00.Ejercicios/0.Libro/2_33 NotasDeCurso/build/
 /JAVA/00.Ejercicios/0.Libro/2_35 PersonaMenorArchivo/nbproject/private/
 /JAVA/00.Ejercicios/0.Libro/2_35 PersonaMenorArchivo/build/
+/JAVA/00.Ejercicios/0.Libro/Tests/dist/
+/JAVA/00.Ejercicios/0.Libro/Cap3.Objetos y Clases/3_18 BinaryArray/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/Cap3.Objetos y Clases/3_18 BinaryArray/build/
+/JAVA/00.Ejercicios/0.Libro/Cap3.Objetos y Clases/3_23 CuentaBancaria/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/Cap3.Objetos y Clases/3_23 CuentaBancaria/build/
+/JAVA/00.Ejercicios/0.Libro/Cap3.Objetos y Clases/2_24 CajaFuerte/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/Cap3.Objetos y Clases/3_24 CajaFuerte/nbproject/private/
+/JAVA/00.Ejercicios/0.Libro/Cap3.Objetos y Clases/3_24 CajaFuerte/build/
