--- a/JAVA/00.Ejercicios/0.Libro/Cap3.Objetos y Clases/3_23 CuentaBancaria/nbproject/project.properties
+++ b/JAVA/00.Ejercicios/0.Libro/Cap3.Objetos y Clases/3_23 CuentaBancaria/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/2_23_EntradaConDelimitadores.jar
+dist.jar=${dist.dir}/3_23_CuentaBancaria.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/2_23_EntradaConDelimitadores
+dist.jlink.output=${dist.jlink.dir}/3_23_CuentaBancaria
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=2_23_EntradaConDelimitadores
-main.class=EntradaConDelimitadores
+jlink.launcher.name=3_23_CuentaBancaria
+main.class=Cuenta.testCuentas
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
