Lambdas y Streams JAVA

--- a/.gitignore
+++ b/.gitignore
@@ -131,3 +131,13 @@
 /JAVA/02.Programacion POO/[[]43] Manejo Archivos con Path/nbproject/private/
 /JAVA/02.Programacion POO/[[]043] Manejo Archivos con Path/nbproject/private/
 /JAVA/02.Programacion POO/[[]043] Manejo Archivos con Path/build/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L03] Metodos Referenciados/nbproject/private/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L03] Metodos Referenciados/build/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L04] Streams/nbproject/private/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L04] Streams/build/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L05] Operaciones Intermedias/nbproject/private/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L05] Operaciones Intermedias/build/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L05] Operaciones Intermedias y Reduccion/nbproject/private/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L05] Operaciones Intermedias y Reduccion/build/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L05] Operaciones Intermedias y Terminales/nbproject/private/
+/JAVA/04.Lambdas, Streams y Programacion Funcional/[[]L05] Operaciones Intermedias y Terminales/build/
